k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jumble
spec:
  type: ClusterIP
  selector:
    app: jumble
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
